fix se-icon vertical alignment when next to text

--- a/src-core/src/components/breadcrumb-item/breadcrumb-item.scss
+++ b/src-core/src/components/breadcrumb-item/breadcrumb-item.scss
@@ -2,7 +2,8 @@
 
 :host {
   div {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
   }
   .breadcrumb-item {
     display: inline;
